# CS_284A_-_Foundations_of_Computer_Graphics

./: README.md
assignments/hw0/hw0-intro-vincentndo/: quad_test.cpp
assignments/hw0/ref/: Setup Building and Submitting CS184 Assignments.html
assignments/proj1/p1-rasterizer-sp20/: README.md
assignments/proj1/p1-rasterizer-sp20-vincentndo/: CMakeLists.txt  README.md
assignments/proj1/p1-rasterizer-sp20-vincentndo/CGL/: CMakeLists.txt
assignments/proj1/p1-rasterizer-sp20-vincentndo/src/: rasterizer.cpp
assignments/proj1/p1-rasterizer-sp20/src/: drawrend.cpp  rasterizer.h  texture.cpp  transforms.cpp
assignments/proj1/ref/: Anisotropic filtering - Wikipedia.html  Building CS184 Assignments.html  C++ Intro.html  Images as Data.html  Primer on Using Vectors and Matrices in the CGL Library.html  Submitting CS184 Assignments.html  Summed-area table - Wikipedia.html  Unix_Linux Permissions - An Introduction and Tutorial.html  transform - SVG  Scalable Vector Graphics | MDN.html
assignments/proj1/ref/Anisotropic filtering - Wikipedia_files/: load.php  load_002.css
assignments/proj1/ref/C++ Intro_files/: cs184-web-e4036be4.css
assignments/proj1/ref/Images as Data_files/: cs184-web-40b5d670.js
assignments/proj1/ref/Summed-area table - Wikipedia_files/: load.css
assignments/proj1/ref/Unix_Linux Permissions - An Introduction and Tutorial_files/: Permissions.html  Permissions_002.html  Permissions_003.html  Permissions_004.html  Permissions_005.html  Permissions_006.html  cookie.js  (+8 more)
assignments/proj2/ref/: A Primer on the HalfedgeMesh Class.html  An Introduction to Half-Edge Data Structure.html  Assignment 2 - MeshEdit.html  Blender Modeling.html  Iterators vs Pointers.html  Primer on Using Vectors and Matrices in the CGL Library.html
assignments/proj3-1/ref/: Assignment 3-1 - Extra Credit.html  Assignment 3-1 - Pathtracer.html  Assignment 3-1 - Write-up.html
assignments/proj3-2/ref/: Assignment 3-2 - Pathtracer.html  Building CS184 Assignments.html  CGL Vectors Library Documentation.html
(+20 files in other folders)
